--- a/clbooks-app/package.json
+++ b/clbooks-app/package.json
@@ -15,6 +15,7 @@
     "expo-linking": "~7.1.7",
     "expo-router": "~5.1.3",
     "expo-status-bar": "~2.2.3",
+    "firebase": "^12.1.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
